Insertion of some chart test code.

--- a/app/src/main/res/layout/activity_dcvoltage.xml
+++ b/app/src/main/res/layout/activity_dcvoltage.xml
@@ -42,4 +42,9 @@
         android:layout_alignBaseline="@+id/button2"
         android:layout_alignBottom="@+id/button2"
         android:layout_alignParentEnd="true" />
+
+    <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:layout_marginTop="100dp"/>
 </RelativeLayout>
