--- a/app/src/main/res/layout/activity_dcvoltage.xml
+++ b/app/src/main/res/layout/activity_dcvoltage.xml
@@ -1,50 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_dcvoltage"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.work.dmm.DCvoltageActivity">
+                xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/activity_dcvoltage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                tools:context="com.example.work.dmm.DCvoltageActivity">
 
-    <TextView
-        android:text="Voltage:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView2" />
-
-    <TextView
-        android:text="Range:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView3" />
+    <com.shinelw.library.ColorArcProgressBar
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/voltageGauge"
+            app:is_need_content="true"
+            app:max_value="100"
+            app:back_width="10dp"
+            app:front_width="10dp"
+            app:total_engle="270"
+            app:is_need_unit="true"
+            app:string_unit="v"
+            app:back_color="@android:color/darker_gray"
+            android:layout_marginBottom="10dp"
+            app:front_color1="#6DD4D5"
+            app:front_color2="#85B2E9"
+            app:front_color3="#9AA1F9"
+    />
 
     <Button
-        android:text="Log Voltage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentStart="true"
-        android:id="@+id/button2" />
+            android:text="Log Voltage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/voltageGauge"
+            android:layout_alignParentStart="true"
+            android:autoText="true" android:id="@+id/logVoltageButton"/>
 
     <Switch
-        android:text="auto Logging mode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/switch1"
-        android:layout_alignBaseline="@+id/button2"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_alignParentEnd="true" />
+            android:text="Auto Logging Mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/loggingToggle"
+            android:layout_alignBaseline="@+id/logVoltageButton"
+            android:layout_alignBottom="@+id/logVoltageButton"
+            android:layout_alignParentEnd="true"
+    />
 
     <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:layout_marginTop="100dp"/>
+            android:layout_height="match_parent"
+            android:layout_below="@+id/logVoltageButton"
+            android:id="@+id/loggingLineChart"/>
+
 </RelativeLayout>
