--- a/app/src/main/res/layout/content_connection_screen.xml
+++ b/app/src/main/res/layout/content_connection_screen.xml
@@ -45,10 +45,19 @@
         android:layout_alignParentEnd="true"
         android:id="@+id/connectionScreen_device_address" />
 
+    <Switch
+        android:text="display received packets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/connectionScreen_device_address"
+        android:id="@+id/switch1"
+        android:checked="false"
+        android:onClick="onClick_displayConsolSwitch" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView6"
+        android:layout_below="@+id/switch1"
         android:background="#000000"
         style="@android:style/Widget.Material.ScrollView"
         android:onClick="onClick_ScrollView">
@@ -64,10 +73,11 @@
                 android:layout_height="fill_parent"
                 android:background="#000000"
                 android:textColor="#ff0000"
-                android:layout_below="@+id/textView6"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/tv_received_data" />
         </LinearLayout>
     </ScrollView>
+
+
 
 </RelativeLayout>
