--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.work.dmm.MainActivity">
 
 
@@ -16,14 +12,18 @@
         android:text="Bluetooth status: "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView4" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="-"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/tv_bluetoothStatus" />
@@ -56,7 +56,8 @@
         android:id="@+id/btn_connect"
         android:onClick="onClick_connect"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignEnd="@+id/textView4"
+        android:layout_marginEnd="15dp" />
 
     <TextView
         android:layout_width="wrap_content"
