--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,6 +6,77 @@
     android:layout_height="match_parent"
     tools:context="com.example.work.dmm.SettingsActivity">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:text="Bluetooth device MAC address:"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_accpetNewID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:onClick="onConfirmButton_Address"
+        android:text="Confirm"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <EditText
+        android:id="@+id/adress1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:ems="2"
+        android:inputType="textPersonName"
+        android:text="3F"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_accpetNewID" />
+
+    <EditText
+        android:id="@+id/adress2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:ems="2"
+        android:inputType="textPersonName"
+        android:text="3F"
+        app:layout_constraintBaseline_toBaselineOf="@+id/adress1"
+        app:layout_constraintLeft_toRightOf="@+id/adress1" />
+
+    <EditText
+        android:id="@+id/adress3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:ems="2"
+        android:inputType="textPersonName"
+        android:text="3F"
+        app:layout_constraintBaseline_toBaselineOf="@+id/adress2"
+        app:layout_constraintLeft_toRightOf="@+id/adress2" />
+
+    <EditText
+        android:id="@+id/adress4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:ems="2"
+        android:inputType="textPersonName"
+        android:text="3F"
+        app:layout_constraintBaseline_toBaselineOf="@+id/adress3"
+        app:layout_constraintLeft_toRightOf="@+id/adress3" />
+
     <EditText
         android:id="@+id/adress5"
         android:layout_width="wrap_content"
@@ -15,29 +86,8 @@
         android:text="3F"
         app:layout_constraintLeft_toRightOf="@+id/adress4"
         android:layout_marginLeft="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/adress4" />
-
-    <EditText
-        android:id="@+id/adress3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="2"
-        android:inputType="textPersonName"
-        android:text="3F"
-        app:layout_constraintLeft_toRightOf="@+id/adress2"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/adress2" />
-
-    <EditText
-        android:id="@+id/adress4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="2"
-        android:inputType="textPersonName"
-        android:text="3F"
-        app:layout_constraintLeft_toRightOf="@+id/adress3"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/adress3" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/adress4"
+        android:layout_marginStart="16dp" />
 
     <EditText
         android:id="@+id/adress6"
@@ -48,37 +98,27 @@
         android:inputType="textPersonName"
         android:text="3F"
         app:layout_constraintBaseline_toBaselineOf="@+id/adress5"
-        app:layout_constraintLeft_toRightOf="@+id/adress5" />
+        app:layout_constraintLeft_toRightOf="@+id/adress5"
+        android:layout_marginStart="17dp" />
 
-    <EditText
-        android:id="@+id/adress2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="2"
-        android:inputType="textPersonName"
-        android:text="3F"
-        app:layout_constraintLeft_toRightOf="@+id/adress1"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/adress1" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:text="address:"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="32dp" />
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="#c0c0c0"
+        tools:layout_editor_absoluteX="0dp"
+        android:id="@+id/view"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/adress4" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Maximum Datapoints"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText_MaxDataPoints" />
+        android:layout_marginStart="16dp"
+        android:text="Maximum Datapoints:"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText_MaxDataPoints"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/editText_MaxDataPoints"
@@ -90,42 +130,128 @@
         android:text="10"
         app:layout_constraintRight_toLeftOf="@+id/btn_acceptNewMaxDataPoints"
         android:layout_marginRight="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/textView3"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="0.333"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/adress1" />
-
-    <Button
-        android:id="@+id/btn_accpetNewID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:onClick="onConfirmButton_Address"
-        android:text="Confirm"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <Button
         android:id="@+id/btn_acceptNewMaxDataPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:onClick="onConfirmButton_MaxDataPoints"
         android:text="Confirm"
         app:layout_constraintBaseline_toBaselineOf="@+id/editText_MaxDataPoints"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <EditText
-        android:id="@+id/adress1"
+    <View
+        android:id="@+id/view2"
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="16dp"
+        android:background="#c0c0c0"
+        app:layout_constraintTop_toBottomOf="@+id/editText_MaxDataPoints"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="2"
-        android:inputType="textPersonName"
-        android:text="3F"
+        android:text="Start frequency (kHz):"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="End Frequency (kHz):"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Step number:"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_accpetNewID" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText5" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CONFIRM"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText5" />
+
+    <EditText
+        android:id="@+id/editText5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:ems="4"
+        android:inputType="numberDecimal"
+        android:maxLength="4"
+        android:text="1"
+        app:layout_constraintRight_toLeftOf="@+id/button6"
+        android:layout_marginRight="1dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CONFIRM"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <EditText
+        android:id="@+id/editText4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:ems="4"
+        android:inputType="numberDecimal"
+        android:maxLength="4"
+        android:text="1"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        app:layout_constraintRight_toLeftOf="@+id/button5"
+        android:layout_marginRight="17dp" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:ems="4"
+        android:inputType="numberDecimal"
+        android:maxLength="4"
+        android:text="1"
+        app:layout_constraintRight_toLeftOf="@+id/button3"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CONFIRM"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText3" />
 
 </android.support.constraint.ConstraintLayout>
