--- a/app/src/main/res/layout/activity_frequency_response.xml
+++ b/app/src/main/res/layout/activity_frequency_response.xml
@@ -6,35 +6,49 @@
     android:layout_height="match_parent"
     tools:context="com.example.work.dmm.FrequencyResponseActivity">
 
-    <com.numetriclabz.numandroidcharts.LogarithmicLineChart
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:id="@+id/logLineChart"
-        tools:layout_editor_absoluteX="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2" />
-
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/logLineChart"
+        android:layout_alignBottom="@+id/freqRespGraph"
         android:layout_centerHorizontal="true"
         android:text="Export chart data"
-        tools:layout_editor_absoluteY="447dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="16dp" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Begin Data Aquisition"
-        app:layout_constraintRight_toLeftOf="@+id/button2"
+        android:layout_marginEnd="7dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="7dp"
+        android:layout_marginStart="8dp"
+        android:onClick="onClickBeginDataAquisition"
+        android:text="Begin Data Aquisition"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
+        app:layout_constraintHorizontal_bias="0.625"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/button2" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:layout_width="368dp"
+        android:layout_height="439dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
-        app:layout_constraintHorizontal_bias="0.625" />
+        android:layout_marginStart="8dp"
+        android:id="@+id/freqRespGraph"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="1.0" />
+
 
 </android.support.constraint.ConstraintLayout>
