--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -159,18 +159,18 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start frequency (kHz):"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
         android:layout_marginLeft="16dp"
+        android:text="Start frequency (Hz):"
+        app:layout_constraintBaseline_toBaselineOf="@+id/freqRespStart"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="End Frequency (kHz):"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
         android:layout_marginLeft="16dp"
+        android:text="End Frequency (Hz):"
+        app:layout_constraintBaseline_toBaselineOf="@+id/freqRespEnd"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
@@ -180,78 +180,81 @@
         android:text="Step number:"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText5" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/freqRespSteps" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CONFIRM"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText5" />
+        android:onClick="onConfirmButton_Steps"
+        android:text="CONFIRM"
+        app:layout_constraintBaseline_toBaselineOf="@+id/freqRespSteps"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/freqRespSteps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:ems="4"
         android:inputType="numberDecimal"
-        android:maxLength="4"
+        android:maxLength="6"
         android:text="1"
         app:layout_constraintRight_toLeftOf="@+id/button6"
-        android:layout_marginRight="1dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/freqRespEnd" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CONFIRM"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
         android:layout_marginRight="16dp"
+        android:onClick="onConfirmButton_EndFreq"
+        android:text="CONFIRM"
+        app:layout_constraintBaseline_toBaselineOf="@+id/freqRespEnd"
         app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/freqRespEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:ems="4"
         android:inputType="numberDecimal"
-        android:maxLength="4"
+        android:maxLength="6"
         android:text="1"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
         app:layout_constraintRight_toLeftOf="@+id/button5"
-        android:layout_marginRight="17dp" />
+        app:layout_constraintTop_toBottomOf="@+id/freqRespStart" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/freqRespStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:ems="4"
         android:inputType="numberDecimal"
-        android:maxLength="4"
+        android:maxLength="6"
         android:text="1"
         app:layout_constraintRight_toLeftOf="@+id/button3"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CONFIRM"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText3" />
+        android:onClick="onConfirmButton_StartFreq"
+        android:text="CONFIRM"
+        app:layout_constraintBaseline_toBaselineOf="@+id/freqRespStart"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
