--- a/app/src/main/res/layout/activity_frequency_response.xml
+++ b/app/src/main/res/layout/activity_frequency_response.xml
@@ -12,26 +12,24 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/freqRespGraph"
         android:layout_centerHorizontal="true"
-        android:text="Export chart data"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="15dp"
+        android:onClick="onClickExport"
+        android:text="Export data"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="16dp" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:onClick="onClickBeginDataAquisition"
         android:text="Begin Data Aquisition"
         app:layout_constraintBaseline_toBaselineOf="@+id/button2"
-        app:layout_constraintHorizontal_bias="0.625"
-        app:layout_constraintRight_toLeftOf="@+id/button2" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:layout_width="368dp"
