--- a/app/src/main/res/layout/activity_dccurrent.xml
+++ b/app/src/main/res/layout/activity_dccurrent.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_dcvoltage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.measurementActivities.DCvoltageActivity">
+    tools:context="com.example.work.dmm.activities.measurementActivities.DCcurrentActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/gaugeLayout"
+        android:id="@+id/gaugeLayout_current"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
         <com.example.work.dmm.displayAndVisualisationClasses.Speedometer
-            android:id="@+id/gauge"
+            android:id="@+id/CurrentGauge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             custom:currentSpeed="3"
@@ -24,9 +24,8 @@
 
     </RelativeLayout>
 
-
     <Button
-        android:id="@+id/btn_ClearLog"
+        android:id="@+id/clearCurrentLog_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -35,7 +34,7 @@
         android:text="Clear Log" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/ExportCurrentData_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClickExportData"
@@ -44,7 +43,7 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/CurrentOscilloscope_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -53,27 +52,26 @@
         android:text="Oscilloscope" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/logCurrent_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:onClick="logVoltage"
-        android:text="Log Voltage" />
+        android:onClick="logCurrent"
+        android:text="Log Current" />
 
     <Switch
-        android:id="@+id/loggingToggle"
+        android:id="@+id/autoLogCurrent_swt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btn_ClearLog"
-        android:layout_alignBottom="@+id/btn_ClearLog"
-        android:layout_alignParentEnd="true"
-        android:text="Auto Logging" />
+        android:text="Auto Logging"
+        android:layout_alignBaseline="@+id/clearCurrentLog_btn"
+        android:layout_alignParentEnd="true" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:layout_marginTop="220dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/loggingLineChart"
-        android:layout_above="@+id/button9" />
+        android:id="@+id/loggingLineChart_Current"
+        android:layout_above="@+id/ExportCurrentData_btn" />
 
 </RelativeLayout>
