--- a/app/src/main/res/menu/activity_connection_screen_drawer.xml
+++ b/app/src/main/res/menu/activity_connection_screen_drawer.xml
@@ -23,6 +23,10 @@
                 android:id="@+id/nav_freqResp"
                 android:icon="@drawable/ic_menu_slideshow"
                 android:title="Frequency response" />
+            <item
+                android:id="@+id/nav_SigGen"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="Signal Generator" />
 
         </group>
 
