--- a/app/src/main/res/layout/activity_capacitance.xml
+++ b/app/src/main/res/layout/activity_capacitance.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.work.dmm.activities.measurementActivities.Level3.CapacitanceActivity">
+    tools:context="com.descon.work.dmm.activities.measurementActivities.Level3.CapacitanceActivity">
 
 </android.support.constraint.ConstraintLayout>
