--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.work.dmm.activities.SettingsActivity">
+    tools:context="com.descon.work.dmm.activities.SettingsActivity">
 
     <TextView
         android:id="@+id/textView2"
