--- a/app/src/main/res/layout/app_bar_connection_screen.xml
+++ b/app/src/main/res/layout/app_bar_connection_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.work.dmm.activities.ConnectionScreenActivity">
+    tools:context="com.descon.work.dmm.activities.ConnectionScreenActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
