--- a/app/src/main/res/menu/activity_connection_screen_drawer.xml
+++ b/app/src/main/res/menu/activity_connection_screen_drawer.xml
@@ -35,6 +35,10 @@
                 android:id="@+id/nav_LightIntensity"
                 android:icon="@drawable/ic_menu_slideshow"
                 android:title="Light meter" />
+            <item
+                android:id="@+id/nav_Diode"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="Diode testing" />
 
         </group>
 
