--- a/app/src/main/res/layout/activity_dccurrent.xml
+++ b/app/src/main/res/layout/activity_dccurrent.xml
@@ -35,21 +35,12 @@
 
     <Button
         android:id="@+id/ExportCurrentData_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClickExportData"
         android:text="Export Data"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
-
-    <Button
-        android:id="@+id/CurrentOscilloscope_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:onClick="onClickOscilloscopeMode"
-        android:text="Oscilloscope" />
 
     <Button
         android:id="@+id/logCurrent_btn"
