--- a/app/src/main/res/menu/activity_connection_screen_drawer.xml
+++ b/app/src/main/res/menu/activity_connection_screen_drawer.xml
@@ -10,7 +10,11 @@
             <item
                 android:id="@+id/nav_Voltage"
                 android:icon="@drawable/ic_menu_slideshow"
-                android:title="Voltage" />
+                android:title="DC Voltage" />
+            <item
+                android:id="@+id/nav_AC_Voltage"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="AC Voltage" />
             <item
                 android:id="@+id/nav_Current"
                 android:icon="@drawable/ic_menu_slideshow"
