--- a/app/src/main/res/layout/content_connection_screen.xml
+++ b/app/src/main/res/layout/content_connection_screen.xml
@@ -46,13 +46,13 @@
         android:id="@+id/connectionScreen_device_address" />
 
     <Switch
-        android:text="display received packets"
+        android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/connectionScreen_device_address"
-        android:id="@+id/switch1"
-        android:checked="false"
-        android:onClick="onClick_displayConsolSwitch" />
+        android:checked="true"
+        android:onClick="onClick_displayConsolSwitch"
+        android:text="display received packets" />
 
     <ScrollView
         android:layout_width="match_parent"
